# opengl-drone-shooter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-linux-x86.yml  build-macos-arm64.yml
docs/: index.html
include/: box.h  camera.h  collision_detection.h  data.h  enemy.h  enemy_manager.h  game_state.h  geometry.h  glfw_setup.h  glowstone.h  ground.h  gun.h  hud.h  mesh.h  mobs.h  model.h  player.h  ray.h  screen_renderer.h  shader.h  skybox.h  terrain.h  terrain_constants.h  text_renderer.h  texture_loading.h  tree.h  vertex_data.h  window.h  world.h
include/glad/: glad.h
lib/: libfreetype.6.dylib
resources/models/plant/: anemone_hybrida.mtl
resources/models/pumpkin/: pumpkin face.mtl
resources/models/trees/desert_land_tree/: hoewa_Forsteriana_2.mtl
resources/models/trees/dessert_land_tree/: hoewa_Forsteriana_1.mtl
resources/models/trees/forest_land_tree/: trees9.mtl
resources/models/trees/night_land_tree/: Tree_001.mtl
shaders/: blocks.vs  explode.geom  explode.vert  ground.frag  ground.vert  laser.frag  light_cube_textured.fs  lighting_map.vs  multiple_lights.fs  screen.vert  skybox.frag  transparent.frag  transparent.fs
src/: box.cpp  camera.cpp  collision_detection.cpp  enemy.cpp  enemy_manager.cpp  glad.c  glfw_setup.cpp  glowstone.cpp  ground.cpp  gun.cpp  hud.cpp  mesh.cpp  mobs.cpp  model.cpp  player.cpp  ray.cpp  screen_renderer.cpp  shader.cpp  skybox.cpp  terrain.cpp  text_renderer.cpp  texture_loading.cpp  tree.cpp  vertex_data.cpp  window.cpp  world.cpp
